<resources>
    <string name="app_name">Русские пароли</string>
    <string name="enter_password">Здесь вы можете посмотреть свой пароль, созданный по методу \«русское слово в английской раскладке\»</string>

    <string name="clipBoard_title">Пароль</string>

    <string name="toast_copied">Текст скопирован</string>
    <string name="check_caps">Заглавные</string>
    <string name="button_generate">Сгенерировать</string>
    <string name="check_nums">Цифры</string>
    <string name="check_simvs">Спецсимволы</string>
    <string name="text_on_checkbox">Сгенерируйте новый пароль ему на замену</string>
    <string name="check_pass_text">Ожидание ввода</string>
    <string name="text_seekBar">Символов: 0</string>
    <string name="its_a">a</string>

    <plurals name="symbols_count">
        <item quantity="zero">%d символов</item>
        <item quantity="one">%d символ</item>
        <item quantity="two">%d символа</item>
        <item quantity="few">%d символа</item>
        <item quantity="many">%d символов</item>
        <item quantity="other">%d символов</item>
    </plurals>

    <string-array name="kastyl">
        <item>A</item>
        <item>1</item>
        <item>%</item>
    </string-array>
    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
        <item>.</item>
        <item>ё</item>
    </string-array>
    <string-array name="latin">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>\;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>\,</item>
        <item>\.</item>
        <item>\/</item>
        <item>\`</item>
    </string-array>
    <string-array name="check_pass">
        <item>Ожидание ввода</item>
        <item>Плохо</item>
        <item>Слишком простой</item>
        <item>Неплохо</item>
        <item>Хорошо</item>
        <item>Пентагон</item>
    </string-array>
</resources>
