<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/base_borders">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/result_border"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/test_result"
                android:layout_marginBottom="@dimen/test_result"
                android:layout_weight="1"
                android:textAppearance="@style/ResultSet"
                tools:text="Result" />

            <ImageButton
                android:id="@+id/button_copy_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/copy_button"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edittext_tint"
            android:layout_marginTop="@dimen/vertical_margin"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/vertical_margin">
            <TextView
                android:id="@+id/sub_edit_sourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:text="@string/check_pass_text"/>

            <ImageView
                android:id="@+id/check_pass_view"
                android:layout_width="@dimen/check_pass_width"
                android:layout_height="@dimen/image_pass_height"
                android:layout_marginRight="@dimen/image_pass_margin_right"
                android:src="@drawable/level_list_for_check_pass"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_on_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_on_checkbox"
            android:text="@string/text_on_checkbox"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <CheckBox
            android:id="@+id/check_caps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="@color/chekbox_tint"
            android:layout_marginBottom="@dimen/checkbox_margin"
            android:text="@string/check_caps" />

        <CheckBox
            android:id="@+id/check_nums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="@color/chekbox_tint"
            android:layout_marginBottom="@dimen/checkbox_margin"
            android:text="@string/check_nums" />

        <CheckBox
            android:id="@+id/check_simvs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/chekbox_tint"
            android:layout_marginBottom="@dimen/checkbox_margin"
            android:text="@string/check_simvs" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumbTint="@color/seekBar_tint"
            android:progressTint="@color/seekBar_tint"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:min="0"
            android:max="16"/>
        <TextView
            android:id="@+id/text_undo_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:text="@string/text_seekBar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/result_border">

            <TextView
                android:id="@+id/text_result_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/test_result"
                android:layout_marginBottom="@dimen/test_result"
                android:layout_toLeftOf="@id/button_copy_password_bottom"
                android:textAppearance="@style/ResultSet"
                tools:text="Result" />

            <ImageButton
                android:id="@+id/button_copy_password_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/copy_button"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="@string/button_generate" />

    </LinearLayout>
</ScrollView>